Read product data
